--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ html .mainContainer .sectionShop .menuCart .cartShop .closeCross {
   transition: all 0.3s ease-in-out;
 }
 html .mainContainer .sectionShop .menuCart .cartShop .closeCross:hover {
-  transform: rotate(270deg);
+  transform: rotate(90deg);
 }
 html .mainContainer .sectionShop .menuCart .menuCartlist .choiceCartlist {
   width: 90%;
@@ -219,7 +219,7 @@ html .mainContainer .sectionWishlist .wishHeadLine .closeCross {
   transition: all 0.3s ease-in-out;
 }
 html .mainContainer .sectionWishlist .wishHeadLine .closeCross:hover {
-  transform: rotate(270deg);
+  transform: rotate(90deg);
 }
 html .mainContainer .sectionWishlist .menuWishlist .choiceWishlist {
   width: 80%;
@@ -382,7 +382,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul {
 html .mainContainer .skullSocialMedia .socialMedia ul li {
   list-style-type: none;
 }
-html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
+html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   width: 40px;
   text-decoration: none;
   margin: 5px 0px;
@@ -501,7 +501,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   transition: all 0.3s ease-in-out;
 }
 .header .menuSide .top label .close:hover {
-  transform: rotate(270deg);
+  transform: rotate(90deg);
 }
 .header .menuSide .menu ul li {
   list-style-type: none;
@@ -865,6 +865,11 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   right: -390px;
   cursor: pointer;
   z-index: 3;
+  transform: rotate(0deg);
+  transition: all 0.3s ease-in-out;
+}
+.getOff .bannerGetOff label .crossCloseWhite:hover {
+  transform: rotate(90deg);
 }
 .getOff .bannerGetOff .slideGetOff {
   display: flex;
@@ -1212,6 +1217,11 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   right: -390px;
   cursor: pointer;
   z-index: 10;
+  transform: rotate(0deg);
+  transition: all 0.3s ease-in-out;
+}
+.containerStore .getOffHoddy .bannerGetOff label .crossCloseWhite:hover {
+  transform: rotate(90deg);
 }
 .containerStore .getOffHoddy .bannerGetOff .title {
   font-size: 4rem;
@@ -1322,6 +1332,12 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   top: -15px;
   right: -250px;
   cursor: pointer;
+  z-index: 10;
+  transform: rotate(0deg);
+  transition: all 0.3s ease-in-out;
+}
+.containerStore .purchaseOrder label .crossCloseWhite:hover {
+  transform: rotate(90deg);
 }
 .containerStore .purchaseOrder .breakaLeg {
   color: #BC2327;
@@ -1562,7 +1578,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   transition: all 0.3s ease-in-out;
 }
 .containerStore .sectionFilter .menuFilterSide .menuFilter label .closeCross:hover {
-  transform: rotate(270deg);
+  transform: rotate(90deg);
 }
 .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter {
   width: 90%;
@@ -1668,7 +1684,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   transition: all 0.3s ease-in-out;
 }
 .containerStore .sectionShop .menuCart .cartShop .closeCross:hover {
-  transform: rotate(270deg);
+  transform: rotate(90deg);
 }
 .containerStore .sectionShop .menuCart .menuCartlist .choiceCartlist {
   width: 90%;
@@ -1796,17 +1812,17 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   font-weight: 600;
 }
 .containerStore #order {
-  display: none;
+  display: flex;
 }
 .containerStore #order:checked ~ .sectionPlaceOrder {
-  transform: translate(0%);
+  transform: translateY(0%);
 }
 .containerStore .sectionPlaceOrder {
   width: 65vw;
   height: auto;
   background-color: #707070;
   position: fixed;
-  top: 20%;
+  top: -80%;
   left: 16.5%;
   display: flex;
   flex-direction: column;
@@ -1814,18 +1830,21 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   align-items: center;
   overflow: hidden;
   box-shadow: 0 0 10px 6px #070707;
-  margin: 0px auto;
-  padding-top: 15px;
+  margin: 7px auto;
+  padding-top: 35px;
   padding-bottom: 30px;
   font-family: "Jura", sans-serif;
   z-index: 8;
-  transform: translate(0%);
+  transform: translateY(150%);
   border-radius: 10px;
   transition: 0.3s ease-in-out;
 }
 .containerStore .sectionPlaceOrder .orderCross .crossCloseWhite {
-  width: 15px;
+  width: 25px;
   cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
   transform: rotate(0deg);
   transition: all 0.3s ease-in-out;
 }
@@ -1981,7 +2000,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   transition: all 0.3s ease-in-out;
 }
 .containerStore .sectionWishlist .wishHeadLine .closeCross:hover {
-  transform: rotate(270deg);
+  transform: rotate(90deg);
 }
 .containerStore .sectionWishlist .menuWishlist .choiceWishlist {
   width: 80%;
@@ -3072,6 +3091,11 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   right: -390px;
   cursor: pointer;
   z-index: 10;
+  transform: rotate(0deg);
+  transition: all 0.3s ease-in-out;
+}
+.getOffHoddy .bannerGetOff label .crossCloseWhite:hover {
+  transform: rotate(90deg);
 }
 .getOffHoddy .bannerGetOff .title {
   font-size: 4rem;
