--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -45,7 +45,7 @@ html{
                         transform: rotate(0deg);
                         transition: all 0.3s ease-in-out;
                         &:hover{
-                            transform: rotate(270deg);
+                            transform: rotate(90deg);
                         }
                     }
                 }
@@ -221,7 +221,7 @@ html{
                     transform: rotate(0deg);
                     transition: all 0.3s ease-in-out;
                     &:hover{
-                        transform: rotate(270deg);
+                        transform: rotate(90deg);
                     }
                 }
             }
@@ -395,7 +395,7 @@ html{
                     bottom:58px;
                     left:30px;
                     li{
-                        list-style-type: none;
+                        list-style-type: none;k
                         .item{
                             .itemSocial{
                                 width:40px;
