--- a/scss/_get_Off.scss
+++ b/scss/_get_Off.scss
@@ -110,6 +110,11 @@
                 right:-390px;
                 cursor: pointer;
                 z-index: 3;
+                transform: rotate(0deg);
+                transition: all 0.3s ease-in-out;
+                &:hover{
+                    transform: rotate(90deg);
+                }
             }
         }
         .slideGetOff{
