--- a/scss/_sign_In.scss
+++ b/scss/_sign_In.scss
@@ -130,6 +130,11 @@
                 right:-390px;
                 cursor: pointer;
                 z-index: 10;
+                transform: rotate(0deg);
+                transition: all 0.3s ease-in-out;
+                &:hover{
+                    transform: rotate(90deg);
+                }
             }
         }
         .title{
