--- a/css/main.css
+++ b/css/main.css
@@ -1820,7 +1820,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 .containerStore .sectionPlaceOrder {
   width: 65vw;
   height: auto;
-  background-color: #707070;
+  background-color: rgba(243, 243, 243, 0.1098039216);
   position: fixed;
   top: -80%;
   left: 16.5%;
@@ -1964,6 +1964,22 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   background-color: #ffffff;
   border: 1px solid #000000;
   font-weight: 600;
+}
+.containerStore .sectionPlaceOrder::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5058823529);
+  backdrop-filter: blur(25px);
+  filter: blur(10px);
+  z-index: -1;
+  border-radius: 10px;
+}
+.containerStore .sectionPlaceOrder > * {
+  position: relative;
 }
 .containerStore #wishlistSide {
   display: none;
