--- a/views/store.html
+++ b/views/store.html
@@ -319,12 +319,11 @@
 
         <!-- Place order -->
 
-        <input type="checkbox" id="order">
+        <input type="checkbox" id="order">Place Order
         <section class="sectionPlaceOrder">
             <label for="order" class="orderCross">
                 <img class="crossCloseWhite" src="../img/close_Cross_White.svg" alt="Cross Icon" >
             </label>
-
             <div class="unionOrder">
                 <div class="delivery">
                     <form class="deliveryContact">
@@ -376,7 +375,7 @@
                         <label for="nameOnCard"></label>
                         <input type="text" id="nameOnCard" placeholder="Name on card *">
 
-                        <button class="btnPlaceOnOrder">Place on order</button>
+                        <button href="#" class="btnPlaceOnOrder">Place on order</button>
                     </form>
                 </div>
             </div>
@@ -384,8 +383,8 @@
 
         <!-- Purchase Order -->
 
-        <!-- <section class="purchaseOrder">
-            <input type="checkbox" id="orderCross">
+        <input type="checkbox" id="orderCross">Purchase Order
+        <section class="sectionPurchaseOrder">
             <label for="orderCross">
                 <img src="../img/close_Cross_White.svg" alt="Cross Icon" class="crossCloseWhite">
             </label>
@@ -396,9 +395,9 @@
                 <img class="cartCheck" src="../img/cart_Check.svg" alt="Break a Leg brand">
                 <p class="order"> Your purchase order number is</p>
                 <p class="number">526896-589</p>
-                <button href="" class="close">Close</button>
+                <button href="#" class="close">Close</button>
             </article>
-        </section> -->
+        </section>
 
         <!-- WhishList -->
 
