--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -172,7 +172,14 @@
 
     // Purchase order
 
-    .purchaseOrder{
+    #orderCross{
+        display: flex;
+        font-family: $fontJura;
+        &:checked ~ .sectionPurchaseOrder{
+            transform:translateY(150%);
+        }
+    }
+    .sectionPurchaseOrder{
         width: 40%;
         height: auto;
         display: flex;
@@ -188,7 +195,7 @@
         z-index: 8;
         padding-top: 30px;
         padding-bottom: 30px;
-        transform: translateY(150%);
+        transform: translateY(0%);
         overflow: hidden;
         transition: .3s ease-in-out;
         #orderCross{
@@ -255,7 +262,7 @@
             }
         }
     }
-    .purchaseOrder::before{
+    .sectionPurchaseOrder::before{
         content: "";
         position: absolute;
         top: 0;
@@ -268,7 +275,7 @@
         z-index: -1;
         border-radius: 10px;
     }
-    .purchaseOrder > * {
+    .sectionPurchaseOrder > * {
         position: relative;
     }
 
@@ -734,14 +741,14 @@
 
     #order{
         display: flex;
+        font-family: $fontJura;
         &:checked ~ .sectionPlaceOrder{
-            transform:translateY(0%);
+            transform:translateY(150%);
         }
     }
     .sectionPlaceOrder{
         width:65vw;
         height:auto;
-        background-color:#f3f3f31c;
         position: fixed;
         top:-80%;
         left:16.5%;
@@ -750,13 +757,14 @@
         justify-content:space-between;
         align-items: center;
         overflow: hidden;
-        box-shadow: 0 0 10px 6px #070707;
+        background-color:#f3f3f31c;
+        box-shadow: 0 0 4px 2px #525252;
         margin:7px auto;
         padding-top:35px;
         padding-bottom:30px;
         font-family: $fontJura;
         z-index: 8;
-        transform: translateY(150%);
+        transform: translateY(0%);
         border-radius: 10px;
         transition: .3s ease-in-out;
         .orderCross{
@@ -764,8 +772,9 @@
                 width:25px;
                 cursor: pointer;
                 position: absolute;
-                top:10px;
-                right:10px;
+                top:-30px;
+                right:-435px;
+                z-index: 8;
                 transform: rotate(0deg);
                 transition: all 0.3s ease-in-out;
                 &:hover{
