--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,9 +12,9 @@
 @import "_store";
 @import "_my_Cart";
 @import "_new_Arrivals";
-@import "_order_Purchase";
+@import "_purchase_Order";
 @import "_wish_List";
-@import "_payment";
+@import "_place_Order";
 @import "_sign_In";
 @import "_footer";
 @import "_room_Dark_Mode";
