Done shipping, filter, myCart, placeOrder, store, wishlist & main SCSS, crreateAccount & signIn views

--- a/views/create_Account.html
+++ b/views/create_Account.html
@@ -269,7 +269,7 @@
                                             <img src="../img/edit_Icon.svg" alt="Edit icon">
                                         </div>
                                     </div>
-                                    <img class="itemWishlist" src="img/wishlist_Icon.svg" alt="Wishlist icon">
+                                    <img class="itemWishlist" src="../img/wishlist_Icon.svg" alt="Wishlist icon">
                                 </div>
                             </article>
                         </div>
