--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Jura:wght@300;400;500;600;700&family=Rubik+Distressed&display=swap');
 @import "_vars";
-@import "_commons";
 @import "_mixins";
+@import "_commons";
 @import "_nav";
 @import "_hero_Section";
 @import "_create_Account";
@@ -15,7 +15,9 @@
 @import "_purchase_Order";
 @import "_wish_List";
 @import "_place_Order";
+@import "_filter";
 @import "_sign_In";
+@import "_shipping";
 @import "_footer";
 @import "_room_Dark_Mode";
 @import "_error404";
