--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -60,6 +60,7 @@
                 a{
                     padding: 0px 5px;
                     .icon{
+                        cursor: pointer;
                         transform: scale(100%);
                         transition: transform 0.3s ease-in-out;
                         &:hover{
