--- a/scss/_wish_List.scss
+++ b/scss/_wish_List.scss
@@ -94,6 +94,7 @@
                             .icons{
                                 img{
                                     width:20px;
+                                    cursor: pointer;
                                 }
                             }
                         }
