--- a/scss/_my_Cart.scss
+++ b/scss/_my_Cart.scss
@@ -101,6 +101,7 @@
                             .icons{
                                 img{
                                     width:20px;
+                                    cursor: pointer;
                                 }
                             }
                         }
