--- a/views/store.html
+++ b/views/store.html
@@ -342,6 +342,14 @@
                             <input type="text" id="lastName" placeholder="Last name *">
                         </div>
 
+                        <!-- <div class="region">
+                            <label for="country"></label>
+                            <input type="text" id="country" placeholder="Country *">
+
+                            <label for="Province"></label>
+                            <input type="text" id="Province" placeholder="Province *">
+                        </div> -->
+
                         <label for="Province"></label>
                         <input type="text" id="Province" placeholder="Province *">
 
