--- a/css/main.css
+++ b/css/main.css
@@ -517,11 +517,19 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 .header .menuSide .top label .close:hover {
   transform: rotate(90deg);
 }
+.header .menuSide .menu {
+  width: 100%;
+}
+.header .menuSide .menu ul {
+  width: 100%;
+}
 .header .menuSide .menu ul li {
+  width: 100%;
   list-style-type: none;
   padding: 10px 0px;
 }
 .header .menuSide .menu ul li .link {
+  width: 100%;
   text-decoration: none;
   color: rgb(194, 193, 193);
   font-size: 0.9rem;
@@ -529,6 +537,23 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   transition: all 0.5s;
 }
 .header .menuSide .menu ul li .link:hover {
+  text-decoration: underline;
+  filter: drop-shadow(0 0 6px #BC2327);
+}
+.header .menuSide .menu ul li .cartShop {
+  width: 100%;
+  padding-bottom: 10px;
+  border-bottom: 1px solid rgb(61, 61, 61);
+}
+.header .menuSide .menu ul li .cartShop .link {
+  width: 100%;
+  text-decoration: none;
+  color: rgb(194, 193, 193);
+  font-size: 0.9rem;
+  font-family: "Jura", sans-serif;
+  transition: all 0.5s;
+}
+.header .menuSide .menu ul li .cartShop .link:hover {
   text-decoration: underline;
   filter: drop-shadow(0 0 6px #BC2327);
 }
