--- a/views/create_Account.html
+++ b/views/create_Account.html
@@ -63,7 +63,11 @@
             <section class="menu">
                 <ul>
                     <li><a href="sign_In.html" class="link">Sign in</a></li>
-                    <li><a href="#" class="link">My cart</a></li>
+                    <li>
+                        <label for="cart" class="cartShop">
+                            <p href="#" class="link">My cart</p>
+                        </label>
+                    </li>
                     <li><a href="../index.html" class="link">Home</a></li>
                     <li><a href="store.html" class="link">Store</a></li>
                     <li><a href="../index.html#giftCards" class="link">Gift cards</a></li>
